# obsidian-transcriber

./: .env.example  .gitignore  CLAUDE.md  README.md  hooks.yaml.example  main.py  obsidian-transcriber.service.template  pyproject.toml  requirements-dev.txt  requirements.txt  setup_service.sh  transcribe_cli.py
.github/workflows/: ci.yml
src/: __init__.py  config.py  constants.py
src/api/: __init__.py  client.py  groq_client.py  retry.py
src/audio/: chunking.py  utils.py
src/hooks/: __init__.py  config.py  runner.py
src/obsidian/: __init__.py  database.py  handler.py  note.py  watcher.py
src/transcription/: service.py
src/utils/: logging.py  system.py  text.py
tests/: __init__.py  test_audio_utils.py  test_config.py  test_database.py  test_hooks.py  test_retry.py  test_text_utils.py
